@@ -113,13 +113,6 @@ public enum ConfigNodes {
                     "# if a town or nation fails to pay it's upkeep it is deleted."),
             GTOWN_SETTINGS_DAILY_TAXES_MAX_TAX("global_town_settings.daily_taxes.max_tax_amount","1000.0", "# Maximum amount allowed when using flat taxes"),
             GTOWN_SETTINGS_DAILY_TAXES_MAX_TAX_PERCENT("global_town_settings.daily_taxes.max_tax_percent","25", "# maximum percentage allowed when taxing by percentages"),
-            GTOWN_SETTINGS_BANK_CAP_AMOUNT("global_town_settings.bank_cap","0",
-                    "",
-                    "# Maximum amount of money allowed in town bank",
-                    "# Use 0 for no limit"),
-            GTOWN_SETTINGS_BANK_ALLOW_WITHDRAWLS("global_town_settings.bank_allow_withdrawls","true",
-                    "",
-                    "# Set to true to allow withdrawls from town banks"),
             GTOWN_SETTINGS_ALLOW_OUTPOSTS("global_town_settings.allow_outposts","true", "# Allow towns to claim outposts (a townblock not connected to town)."),
             GTOWN_SETTINGS_ALLOW_TOWN_SPAWN("global_town_settings.allow_town_spawn","true", "# Allow the use of /town spawn"),
             GTOWN_SETTINGS_ALLOW_TOWN_SPAWN_TRAVEL("global_town_settings.allow_town_spawn_travel","true", "# Allow regular residents to use /town spawn [town] (TP to other towns if they are public)."),
@@ -365,6 +358,18 @@ public enum ConfigNodes {
                     "# all of it's residents are kicked and the town is removed."),
             ECO_PRICE_DEATH("economy.price_death","1.0"),
             ECO_PRICE_DEATH_WARTIME("economy.price_death_wartime","200.0"),
+            ECO_BANK_CAP("economy.banks","", ""),
+            ECO_BANK_CAP_TOWN("economy.banks.town_bank_cap","0",
+                    "# Maximum amount of money allowed in town bank",
+                    "# Use 0 for no limit"),
+            ECO_BANK_TOWN_ALLOW_WITHDRAWLS("economy.banks.town_allow_withdrawls","true",
+                    "# Set to true to allow withdrawls from town banks"),
+            ECO_BANK_CAP_NATION("economy.banks.nation_bank_cap","0",
+                    "# Maximum amount of money allowed in nation bank",
+                    "# Use 0 for no limit"),
+            ECO_BANK_NATION_ALLOW_WITHDRAWLS("economy.banks.nation_allow_withdrawls","true",
+                    "# Set to true to allow withdrawls from nation banks"),
+                    
             WAR("war","",
             		"", "",
                     "############################################################",
