@@ -260,8 +260,8 @@ mag_backup_success: '&2Backup successful.'
 msg_xx_withdrew_xx: '&b%s withdrew %s from the %s bank.'
 msg_xx_deposited_xx: '&b%s deposited %s into the %s bank.'
 msg_insuf_funds: '&cYou don''t have that much.'
-msg_err_withdraw_disabled: 'Withdrawing from town banks is disabled!'
-msg_err_deposit_capped: 'Unable to desposit money, town bank cap of %s exceeded.'
+msg_err_withdraw_disabled: 'Withdrawing from this bank is disabled!'
+msg_err_deposit_capped: 'Unable to desposit money. This bank is capped at %s.'
 
 msg_set_town_home: '&bSuccessfully changed town''s home block to %s'
 msg_set_town_spawn: '&bSuccessfully changed town''s spawn.'
