@@ -538,3 +538,4 @@ v0.76.1:
       This setting is in seconds. It will allow players to break protected blocks in the wild and town, even if they dont have permission.
       The blocks will drop no loot and will regenerate after the specified time.
       Defaults to 0 (disabled).
+    - Added Nation bank caps and moved the settings to the economy section.
